# pydantic-studio

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Taskfile.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/site/: api.md  architecture.md  cli.md  embedding.md  index.md  release.md  tutorial.md
docs/site/examples/: console-mode.md  index.md  multi-format.md  server-config.md  variant-selection.md
docs/superpowers/plans/: 2026-05-05-pydantic-studio-phase-1-form-tree.md  2026-05-06-pydantic-studio-phase-2-type-coverage.md  2026-05-06-pydantic-studio-phase-3-type-coverage-round-2.md  2026-05-06-pydantic-studio-phase-4-yaml-io.md  2026-05-06-pydantic-studio-phase-5-textual-renderer.md  2026-05-06-pydantic-studio-phase-6-html-renderer.md  2026-05-06-pydantic-studio-phase-7-toml-json-io.md  2026-05-06-pydantic-studio-phase-8-polish.md  2026-05-06-pydantic-studio-phase-9-documentation.md  2026-05-14-shadcn-web-redesign-phase-1-json-api.md  2026-05-14-shadcn-web-redesign-phase-2-frontend-scaffold.md  2026-05-14-shadcn-web-redesign-phase-3-primitive-renderers.md  2026-05-15-shadcn-web-redesign-phase-4-container-fields.md  2026-05-15-shadcn-web-redesign-phase-5-remaining-primitives.md  2026-05-15-tui-redesign-m1-chrome.md  2026-05-15-tui-redesign-m2-leaf-cells.md  2026-06-30-embeddable-renderers.md  2026-06-30-native-variant-model-selection.md  2026-07-01-multi-session-embed-manager.md
docs/superpowers/specs/: 2026-05-05-pydantic-studio-design.md  2026-05-14-shadcn-web-redesign-design.md  2026-05-15-tui-config-aesthetic-redesign-design.md  2026-06-11-form-mode-paradigm-design.md  2026-06-11-task-oriented-editing-design.md  2026-06-30-embeddable-renderers-design.md
examples/: 01_basic_settings.py  02_server_config.py  03_temporal_and_network.py  04_dynamic_containers.py  05_console_prompts.py  _runner.py
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
frontend/scripts/: build.sh  dev-backend.py
frontend/src/: App.tsx  main.tsx
frontend/src/api/: base.ts  mutations.ts  schemas.ts  submit.ts  tree.ts
frontend/src/components/form/: FormField.tsx  VariantSelector.tsx  errors.tsx  path.ts
frontend/src/components/form/chrome/: Chip.tsx  ContainerConstraintChips.tsx  Description.tsx  FieldError.tsx  FieldHeader.tsx  FieldRow.tsx  NumericConstraintChips.tsx  RequiredBadge.tsx  StringConstraintChips.tsx  TypeBadge.tsx
frontend/src/components/form/fields/: AnyField.tsx  BoolField.tsx  BytesField.tsx  DateField.tsx  DatetimeField.tsx  DecimalField.tsx  EmailField.tsx  EnumField.tsx  FloatField.tsx  GroupField.tsx  IPAddressField.tsx  IPNetworkField.tsx  IntField.tsx  LiteralField.tsx  MappingField.tsx  PathField.tsx  PatternField.tsx  SecretField.tsx  SequenceField.tsx  StringField.tsx  TimeField.tsx  TimedeltaField.tsx  URLField.tsx  UUIDField.tsx  UnionField.tsx
frontend/src/lib/: required.ts  typeName.ts
frontend/src/styles/: globals.css
scripts/: readme_screenshots.py  verify_distribution_metadata.py
src/pydantic_studio/: __init__.py  cli.py  exceptions.py  outcome.py  session.py  variants.py
src/pydantic_studio/io/: __init__.py  _json_strict.py  dispatch.py  json_.py  toml.py  yaml.py  yaml_draft.py
src/pydantic_studio/renderers/: __init__.py  console.py
src/pydantic_studio/renderers/html/: __init__.py  embed.py  render.py  routes.py  serialize.py  server.py
src/pydantic_studio/renderers/html/static/: htmx.min.js  studio.css
src/pydantic_studio/renderers/html/templates/: base.html.jinja  form.html.jinja
src/pydantic_studio/renderers/textual_/: __init__.py  app.py  screens.py  studio_screen.py  theme.tcss
src/pydantic_studio/renderers/textual_/widgets/: __init__.py  action_bar.py  breadcrumb.py  containers.py  editor.py  field_list.py  field_row.py  footer_hints.py  help_bar.py  preview.py  scalars.py  sidebar.py
src/pydantic_studio/renderers/textual_/widgets/cells/: __init__.py  any_cell.py  base.py  bool_cell.py  choice_cell.py  container_cell.py  input_cell.py  labels.py  parse.py  root_variant_cell.py  secret_cell.py  text_cell.py
src/pydantic_studio/tree/: __init__.py  builder.py  draft.py  nodes.py  paths.py  snapshots.py  validation.py
src/pydantic_studio/types/: __init__.py  aliases.py  annotated.py  anyfield.py  choices.py  core_schema_fallback.py  mapping.py  metadata.py  models.py  network.py  primitives.py  registry.py  sequences.py  special.py  temporal.py  transforms.py  unions.py  utils.py
tests/: conftest.py
tests/e2e/: conftest.py  test_accessible_labels.py  test_any_field.py  test_container_constraints.py  test_mapping_field.py  test_network_fields.py  test_optional_group_field.py  test_responsive_layout.py  test_save_cancel.py  test_sequence_field.py  test_spa_edit_flow.py  test_special_fields.py  test_temporal_fields.py  test_union_field.py  test_variant_selector.py
tests/fixtures/: schemas.py
tests/unit/: test_annotated.py  test_any_field.py  test_any_io_output.py  test_builder.py  test_builder_subclass_dispatch.py  test_cli.py  test_cli_edit.py  test_console_renderer.py  test_core_schema_fallback.py  test_dispatch.py  test_docs_build.py  test_draft.py  test_enum.py  test_examples_runner.py  test_exceptions.py  test_html_api_routes.py  test_html_embed_manager.py  test_html_embedding.py  test_html_render.py  test_html_serialize.py  test_html_server.py  test_html_static_bundle.py  test_json_io.py  test_literal.py  test_mapping.py  test_metadata.py  test_missing_required.py  test_mutations.py  test_network.py  test_nodes.py  test_optional_model_none_default.py  test_parse_on_load.py  test_paths.py  test_public_api.py  test_registry_reset.py  test_release_readiness_docs.py  test_round_trip.py  test_save_draft_yaml.py  test_sequence.py  test_session.py  (+43 more)
