[project]
name = "pydantic-studio"
version = "0.0.4"
description = "Interactive editor for Pydantic models — produces config.yaml/.toml/.json"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "pydantic-studio contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13",
  "ruamel.yaml>=0.18",
]

[project.scripts]
pydantic-studio = "pydantic_studio.cli:app"

[project.optional-dependencies]
email = ["email-validator>=2"]

[project.urls]
Source = "https://github.com/pydantic-studio/pydantic-studio"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov",
  "email-validator>=2",
]
lint = [
  "ruff",
  "pyright",
]

[build-system]
requires = ["uv_build>=0.8,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = "-ra"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PT", "RUF", "TC", "SIM"]

[tool.ruff.lint.flake8-type-checking]
# Pydantic models need annotations evaluated at runtime to build their schema,
# so types referenced in BaseModel-subclass annotations must remain in the
# runtime import section (not moved to TYPE_CHECKING).
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[tool.uv]
default-groups = ["dev", "lint"]
